[package]
name = "arduino_hal"
version = "0.1.0"
authors = ["Parham <lambdaxmapstox@gmail.com>"]

[dependencies]
nb           = "0.1.1"

[dependencies.embedded-hal]
version = "0.2.1"
features = ["unproven"]

[dependencies.ux]
version = "0.1.2"
default-features = false
features = []



[profile.dev]
incremental = false